# online_chat_api

./: .pre-commit-config.yaml  Dockerfile.local  Makefile  README.md  docker-compose-local.yml  pyproject.toml
auth/: consts.py  dependencies.py  exceptions.py  mixins.py  models.py  orm_utils.py  routers.py  schemas.py  utils.py
chat/: exceptions.py  json_codecs.py  models.py  routers.py  schemas.py  utils.py  websocket_managers.py
core/: __init__.py  base.py  broadcasting.py  db.py  dependencies.py  main.py  metaclasses.py  mixins.py  models.py  routing.py  schemas.py  settings.py  utils.py
migrations/: env.py
migrations/versions/: 04f3c94893f4_init.py  38ab1f473af6_init.py  be9e6e12e004_init_base_db.py  f80e4e428b9c_.py
